// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartCouunt /> Matches the snapshot 1`] = `
<CartAnimationStyles__CartAnimation>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="10"
      timeout={
        Object {
          "enter": 400,
          "exit": 400,
        }
      }
      unmountOnExit={true}
    >
      <CartIconStyles__CartIcon>
        10
      </CartIconStyles__CartIcon>
    </CSSTransition>
  </TransitionGroup>
</CartAnimationStyles__CartAnimation>
`;

exports[`<CartCouunt /> updates via props 1`] = `
<CartAnimationStyles__CartAnimation>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="50"
      timeout={
        Object {
          "enter": 400,
          "exit": 400,
        }
      }
      unmountOnExit={true}
    >
      <CartIconStyles__CartIcon>
        50
      </CartIconStyles__CartIcon>
    </CSSTransition>
  </TransitionGroup>
</CartAnimationStyles__CartAnimation>
`;

exports[`<CartCouunt /> updates via props 2`] = `
<CartAnimationStyles__CartAnimation>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="10"
      timeout={
        Object {
          "enter": 400,
          "exit": 400,
        }
      }
      unmountOnExit={true}
    >
      <CartIconStyles__CartIcon>
        10
      </CartIconStyles__CartIcon>
    </CSSTransition>
  </TransitionGroup>
</CartAnimationStyles__CartAnimation>
`;
